--- a/index.html
+++ b/index.html
@@ -22,7 +22,47 @@
 
 </head>
 <body>
-  
+  <header>
+    <div class="header_top bg_white">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-2 text-left">
+            <div class="nav_logo">
+              <img class="logo_img" src="img/logo.svg" alt="Logo della Barra nav">
+            </div>
+          </div>
+          <div class="col-xs-10 text-right">
+            <nav class="main_nav">
+              <ul class="list-inline visible-md-inline visible-lg-inline">
+                <li><a href="#">mobilità</a></li>
+                <li><a href="#">helbiz kitchen</a></li>
+                <li><a href="#">my helbiz</a></li>
+                <li><a href="#">unlimited</a></li>
+                <li><a href="#">chi siamo</a></li>
+              </ul>
+            </nav>
+            <nav class="secondary_nav">
+              <ul class="list-inline visible-md-inline visible-lg-inline">
+                <li><button class="lang_btn">ITA</button></li>
+                <li><button class="btn">Login</button></li>
+              </ul>
+              <button class="burger_btn hidden-md hidden-lg"><i class="hamburger fas fa-bars"></i></button>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="hero">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-xs-12">
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </header>
 
 </body>
 </html>
