Header completata e responsive - inclusa sezione hero con H1 scalare

--- a/index.html
+++ b/index.html
@@ -56,13 +56,17 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-xs-12">
-
+            <h1 class="main_title">La mobilità del futuro</h1>
+            <img class="hero__img"src="img/hero.jpg" alt="Immagine con tre tipi di mezzi elettrici">
           </div>
         </div>
       </div>
     </div>
-
   </header>
+
+  <main>
+    
+  </main>
 
 </body>
 </html>
