Completata sezione del Main complessa con layer sovrapposti

--- a/index.html
+++ b/index.html
@@ -65,7 +65,29 @@
   </header>
 
   <main>
-    
+    <!-- sezione con layer accatastati  -->
+    <section id="sezione_complessa">
+      <div class="small_container boxes_container">
+        <div class="box box_iphone">
+          <img src="img/iphone.png" alt="Cornice dell'Iphone per visualizzazione carousel">
+
+        </div><!--
+     --><div class="box box_1">
+         <h2>Come funziona Helbiz?</h2>
+        </div><!--
+     --><div class="box box_2">
+         <h4>Step 1</h4>
+         <p>Trova il mezzo più vicino a te</p>
+
+        </div>
+      </div>
+
+    </section>
+    <!-- sezione con layer accatastati  -->
+
+
+
+
   </main>
 
 </body>
