Corretta sezione complessa del main in modo che sia responsive

--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
   <main>
     <!-- sezione con layer accatastati  -->
     <section id="sezione_complessa">
+      <div class="banner_box"></div>
       <div class="small_container boxes_container">
-        <div class="box box_iphone">
+        <div class="box box_iphone text-center">
           <img src="img/iphone.png" alt="Cornice dell'Iphone per visualizzazione carousel">
 
         </div><!--
