Sistemato anche sfondo dentro l'Iphone

--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
       <div class="banner_box"></div>
       <div class="small_container boxes_container">
         <div class="box box_iphone text-center">
-          <img src="img/iphone.png" alt="Cornice dell'Iphone per visualizzazione carousel">
-
+          <div class="iphone_bg">
+            <img src="img/iphone.png" alt="Cornice dell'Iphone per visualizzazione carousel">
+          </div>
         </div><!--
      --><div class="box box_1">
          <h2>Come funziona Helbiz?</h2>
