Completata sezione  main products e reso responsive il tutto

--- a/index.html
+++ b/index.html
@@ -65,6 +65,41 @@
   </header>
 
   <main>
+
+    <!-- sezione prodotti -->
+    <section id="main_products">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-xs-12 col-md-4">
+            <div class="product_box">
+              <img class="product_title" src="img/helbiz-go.svg" alt="Titolo sezione prodotti">
+              <h4>La mobilità in sharing senza interruzioni.</h4>
+              <a class="product_link" href="#">Per saperne di più</a>
+              <img class="product_img" src="img/helbizgo.png" alt="Monopattino elettrico">
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <div class="product_box">
+              <img class="product_title" src="img/helbiz-bike.svg" alt="Titolo sezione prodotti">
+              <h4>La nuova generazione di biciclette elettriche da città.</h4>
+              <a class="product_link" href="#">Per saperne di più</a>
+              <img class="product_img" src="img/helbizbike.png" alt="Bicicletta elettrica">
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <div class="product_box">
+              <img class="product_title" src="img/helbiz-moped.svg" alt="Titolo sezione prodotti">
+              <h4>Condivisione di scooter elettrici per i viaggi più lunghi</h4>
+              <a class="product_link" href="#">Per saperne di più</a>
+              <img class="product_img" src="img/helbizmoped.png" alt="Motorino elettrico">
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+    <!-- sezione prodotti -->
+    
     <!-- sezione con layer accatastati  -->
     <section id="sezione_complessa">
       <div class="banner_box"></div>
@@ -86,6 +121,7 @@
 
     </section>
     <!-- sezione con layer accatastati  -->
+
 
 
 
