Completata e resa responsive quasi tutto il main

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-xs-12 col-md-4">
-            <div class="product_box">
+            <div class="product_box bg_grey">
               <img class="product_title" src="img/helbiz-go.svg" alt="Titolo sezione prodotti">
               <h4>La mobilità in sharing senza interruzioni.</h4>
               <a class="product_link" href="#">Per saperne di più</a>
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-md-4">
-            <div class="product_box">
+            <div class="product_box bg_grey">
               <img class="product_title" src="img/helbiz-bike.svg" alt="Titolo sezione prodotti">
               <h4>La nuova generazione di biciclette elettriche da città.</h4>
               <a class="product_link" href="#">Per saperne di più</a>
@@ -87,7 +87,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-md-4">
-            <div class="product_box">
+            <div class="product_box bg_grey">
               <img class="product_title" src="img/helbiz-moped.svg" alt="Titolo sezione prodotti">
               <h4>Condivisione di scooter elettrici per i viaggi più lunghi</h4>
               <a class="product_link" href="#">Per saperne di più</a>
@@ -98,8 +98,8 @@
       </div>
 
     </section>
-    <!-- sezione prodotti -->
-    
+    <!-- /sezione prodotti -->
+
     <!-- sezione con layer accatastati  -->
     <section id="sezione_complessa">
       <div class="banner_box"></div>
@@ -120,7 +120,68 @@
       </div>
 
     </section>
-    <!-- sezione con layer accatastati  -->
+    <!-- /sezione con layer accatastati  -->
+
+    <!-- sezione a mosaico -->
+    <section id="mosaico" class="bg_grey">
+      <!-- prima parte -->
+      <div class="mosaico_primo">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-6 col-md-push-6">
+              <div class="product_box">
+                <img class="logo_carpisa" src="img/carpisa-logo.png" alt="Logo Carpisa">
+                <h2 class="carpisa_title">Noleggia oggi il tuo Helbiz personale</h2>
+                <p class="carpisa_description">Noleggia il tuo e-scooter privato per soli € 49,95 al mese</p>
+                <a href="">Per saperne di più</a>
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-6 text-center col-md-pull-6">
+              <img class="carpisa_img" src="img/helbizgo.png" alt="Monopattino Elettrico"</img>">
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /prima parte -->
+      <!-- seconda parte -->
+      <div class="mosaico_secondo">
+        <div class="container">
+          <div class="col-xs-12 col-sm-6">
+            <div class="product_box bg_light_blue text-center">
+              <h2>Skip ora fa parte di Helbiz</h2>
+              <img src="img/scooter.png" alt="Immagine di uno scooter elettrico Skip">
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <div class="product_box bg_yellow text-center">
+              <h2>Mimoto ora fa parte di Helbiz</h2>
+              <img src="img/mimoto-moped.png" alt="Immagine di una moto elettrica Mimoto">
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /seconda parte -->
+      <!-- terza parte -->
+      <div class="mosaico_terzo">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="product_box sezione_sfondo">
+                <div class="text_box text-center">
+                  <h2>Mobilità intelligente su due ruote</h2>
+                  <p>Un'alternativa più conveniente e pulita<br> per muoversi in città</p>
+                  <a href="#">Per saperne di più</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /terza parte -->
+
+
+    </section>
+    <!-- sezione a mosaico -->
 
 
 
